# detours.net

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
detours.net/DetoursDll/src/: DetoursDll.cpp
detours.net/DetoursNet/: CMakeLists.txt
detours.net/DetoursNet/src/: DetoursNetLoader.cs
